# Rigor

./: .gitignore  .hermes.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.ja.md  README.md  README.zh.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: architecture.md  maintenance.md  quickstart.md  troubleshooting.md
examples/secure-paste/: .env.example  Dockerfile  README.md  README.zh.md  dashboard.json  docker-compose.yml  requirements.txt
examples/secure-paste/app/: main.py
examples/secure-paste/demo/: README.md  index.html
examples/secure-paste/src/: app.py
examples/url-shortener/: README.md
knowledge-base/structured/: edges.json  effectiveness.json  knowledge-index.json  project-profiles.json
profiles/: README.md  SOUL-TEMPLATE.md
profiles/backend-engineer/: SOUL.md  config.yaml
profiles/code-reviewer/: SOUL.md
profiles/data-engineer/: SOUL.md
profiles/data-scientist/: SOUL.md
profiles/devops-engineer/: SOUL.md
profiles/frontend-engineer/: SOUL.md
profiles/orchestrator/: .update_check  SOUL.md  auth.json  channel_directory.json  config.yaml  config.yaml.bak.20260513_204120  gateway.pid  gateway_state.json  state.db-shm  state.db-wal
profiles/orchestrator/cron/: ticker_heartbeat  ticker_last_success
profiles/orchestrator/lsp/: package-lock.json  package.json
profiles/orchestrator/pastes/: paste_1_095445.txt  paste_1_112942.txt  paste_1_113230.txt  paste_1_200554.txt  paste_2_100524.txt  paste_3_101042.txt  paste_4_160440.txt  paste_5_160456.txt
profiles/orchestrator/skills/: .bundled_manifest  .curator_state  .usage.json
profiles/product-manager/: SOUL.md
profiles/qa-engineer/: SOUL.md
profiles/security-auditor/: SOUL.md
profiles/tech-lead/: SOUL.md
profiles/technical-writer/: SOUL.md
scripts/: bootstrap.sh  init-project.sh  monitor.sh  rigor.sh  setup-expert-team.sh
src/rigor/: autofix.py  cli.py
src/rigor/core/: file_ops.py  patch_gen.py
src/rigor/git/: factory.py  github.py  gitlab.py  platform.py
src/rigor/modules/: autofix.py  code_map.py  contract.py  framing.py  knowledge.py  mock.py  monitor.py  pr.py  reports.py  security.py  terminal.py  (+1 more)
src/rigor_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_autofix.py  test_cli.py  test_tui.py
tests/core/: test_file_ops.py  test_patch_gen.py
tests/modules/: test_code_map.py  test_contract.py  test_framing.py  test_git_factory.py  test_mock.py  test_monitor.py  test_security.py  test_terminal.py  test_webhook.py
(+68 files in other folders)
