[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rigor-cli"
version = "2.0.0"
description = "12-Role AI Engineering Team - CLI and Modules"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=5.0", "ruff>=0.5.0", "pre-commit>=3.5", "textual>=0.40.0"]
security = ["pip-audit>=2.7"]
tui = ["textual>=0.40.0"]

[project.scripts]
rigor = "rigor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rigor.tui" = ["*.tcss"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rigor"]

[tool.pytest.ini_options]
testpaths = [
    "tests/core",
    "tests/modules",
    "tests/test_autofix.py",
    "tests/test_cli.py",
    "tests/test_tui.py",
]
norecursedirs = ["tests/test_serverguard"]
addopts = "-v --tb=short --cov=rigor --cov-report=term-missing --cov-fail-under=40"

[tool.coverage.run]
branch = true
source = ["rigor"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
